# sudoku

./: Cargo.toml  README.md  index.html  sudoku-bevy-16e2387b08fb9221.js  sudoku-bevy-20bae8f5a6081420.js  sudoku-bevy-3212f7d2ea5958a0.js  sudoku-bevy-3e61a02f8ad33709.js  sudoku-bevy-47d6c16f20a9124b.js  sudoku-bevy-5af0b41e5db737e5.js  sudoku-bevy-6cc9d8935e403e3c.js  sudoku-bevy-85e01d98839d5efb.js  sudoku-bevy-86911901ebd3a853.js  sudoku-bevy-e3a44480f22d96ae.js  sudoku-bevy-e872739287de6f3e.js
.github/workflows/: gh-pages.yml  release.yml
sudoku-bevy/: Cargo.toml  Trunk.toml  index.html
sudoku-bevy/src/: lib.rs  main.rs
sudoku-bevy/src/commands/: mod.rs  reset_board.rs
sudoku-bevy/src/extensions/: mod.rs
sudoku-bevy/src/pancam/: mod.rs
sudoku-bevy/src/plugins/: game_commands.rs  input_handling.rs  loading_plugin.rs  mod.rs  setup.rs  shared.rs
sudoku-bevy/src/shared/: components.rs  mod.rs  resources.rs
sudoku-bevy/sudoku-samples/: Cargo.toml
sudoku-cli/: Cargo.toml
sudoku-cli/src/: lib.rs  main.rs
sudoku-samples/src/: easy.rs  lib.rs  normal.rs
sudoku-solver/: Cargo.toml
sudoku-solver/src/: lib.rs  numbers.rs
sudoku-solver/src/strategies/: hidden_single.rs  mod.rs  naked_pair.rs  naked_single.rs
