[workspace]
resolver = "3"
members = ["sudoku-bevy", "sudoku-cli", "sudoku-samples", "sudoku-solver"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
