[package]
name = "sudoku-bevy"
version = "0.2.3"
edition = "2024"

[features]
default = ["dynamic_linking", "debug"]
dynamic_linking = ["bevy/dynamic_linking", "bevy_dylib"]
wasm = ["getrandom", "getrandom/wasm_js"]
debug = ["bevy/debug"]

[dependencies]
rand = "*"
getrandom = { version = "*", optional = true }
sudoku-solver = { version = "0.2.0", path = "../sudoku-solver" }
bevy = { version = "0.18.0", default-features = false, features = ["2d"] }
bevy_dylib = { version = "0.18.0", optional = true }
bevy_tweening = "0.15"
bevy_pancam = "0.20"
sudoku-samples = { version = "0.1.0", path = "../sudoku-samples" }
